objects/mcdm_15__PersonalizationFieldMap__c.object
<CustomObject>
    <description>Map fields between source object fields and journey event data extension columns.</description>
    <fields>
        <fullName>mcdm_15__DestinationName__c</fullName>
        <description>Name of the column in the event data extention used for substitution in the email.</description>
        <label>Destination Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__IncludeInSendPayload__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to include this data when putting someone on a journey.</description>
        <label>Include In Send Payload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ObjectName__c</fullName>
        <description>Name of the Object (custom or standard) that this mapping is for.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SourceName__c</fullName>
        <description>Name of the field on the object to read from.</description>
        <label>Source Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Type__c</fullName>
        <description>Optional classification for field&apos;s type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Personalization Field Map</label>
    <listViews>
        <fullName>mcdm_15__All</fullName>
        <columns>NAME</columns>
        <columns>mcdm_15__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMOFM-{0000}</displayFormat>
        <label>Personalization Field Map</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personalization Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>